--- a/calculator.html
+++ b/calculator.html
@@ -60,8 +60,8 @@
 			<div class="screen"></div>
 			<div class="buttons"></div>
 		</div>
-	<div id="credits"><p>Coded by <a href="#">MelMoMo</a></p><p>Credits</p></div>
-	</div>
+<!-- 	<div id="credits"><p>Coded by <a href="#">MelMoMo</a></p><p>Credits</p></div>
+ -->	</div>
 	<div id="overlay"></div>
 </body>
 
